--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "react-router-redux": "^4.0.7",
     "redux": "^3.6.0",
     "redux-auth-wrapper": "^1.0.0",
+    "redux-devtools-extension": "^2.13.2",
     "redux-immutable": "^4.0.0",
     "redux-logger": "^3.0.6",
     "redux-saga": "^0.16.0",
