--- a/package.json
+++ b/package.json
@@ -51,10 +51,12 @@
     "immutable": "^3.8.2",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
+    "react-html5-camera-photo": "^1.0.0-beta.10",
     "react-redux": "^5.0.2",
     "react-router": "^3.0.2",
     "react-router-dom": "^4.2.2",
     "react-router-redux": "^4.0.7",
+    "react-webcam": "^0.5.0",
     "redux": "^3.6.0",
     "redux-auth-wrapper": "^1.0.0",
     "redux-devtools-extension": "^2.13.2",
