--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "redux-logger": "^3.0.6",
     "redux-saga": "^0.16.0",
     "redux-thunk": "^2.2.0",
+    "uglifyjs-webpack-plugin": "^1.2.5",
     "web3": "^1.0.0-beta.34",
     "zos-lib": "^1.0.0"
   },
