--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "immutable": "^3.8.2",
     "ipfs-api": "^22.0.0",
     "react": "^15.4.2",
+    "react-device-detect": "^1.3.4",
     "react-dom": "^15.4.2",
     "react-html5-camera-photo": "^1.0.0-beta.10",
     "react-redux": "^5.0.2",
