--- a/package.json
+++ b/package.json
@@ -73,7 +73,7 @@
     "zos-lib": "^1.0.0"
   },
   "scripts": {
-    "start": "node scripts/start.js",
+    "start": "HOST=0.0.0.0 node scripts/start.js",
     "build": "node scripts/build.js",
     "test": "node scripts/test.js --env=jsdom"
   },
